tests/compile-fail/rust_action_type_error.stderr
error[E0308]: mismatched types
 --> $DIR/rust_action_type_error.rs:7:29
  |
7 |     rule foo() -> X = "a" { Y } //~ ERROR
  |                             ^ expected struct `X`, found struct `Y`
